@@ -12,7 +12,7 @@
 # runlevel as the net.* script that needs it.
 depend() {
 	need localmount
-	after bootmisc hostname
+	after bootmisc modules hostname
 	use isapnp isdn pcmcia usb wlan
 
 	# Load any custom depend functions for the given interface
@@ -1113,4 +1113,4 @@ stop() {
 	run "${IFACE}" stop
 }
 
-# vim:ts=4
+# vim: set ts=4 :
